--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.13.0",
     "astro": "^2.0.1"
   },
   "devDependencies": {
+    "prettier-plugin-astro": "^0.7.2",
     "sass": "^1.57.1"
+  },
+  "[astro]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   }
 }
