--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "prettier-plugin-astro": "^0.7.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "swiper": "^9.0.0"
   },
   "[astro]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
