--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@astrojs/image": "^0.13.0",
     "@fontsource/noto-sans-jp": "^4.5.12",
-    "astro": "^2.0.1"
+    "astro": "^2.0.1",
+    "astro-seo": "^0.7.1"
   },
   "devDependencies": {
     "prettier-plugin-astro": "^0.7.2",
